Changing the Index
I did this to alter the index to it's semi-final form.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p> I'm hosted with GitHub Pages. </p>
+<h1>Hello struggling juniors!</h1>
+<p> This is the bare bones website where I post files to help with 
+the following subjects: </p>
+<p>~Advanced Math Analysis </p>
+<p>~AP Chemistry</p>
+<p>~Chinese 3 </p>
+<p>~Physics</p>
+<p>~AP Composition</p>
+<p>~AP United States History</p>
+
+<h2>Advanced Math Analysis</h2>
+<h3>AP Chemistry </h3>
+<h4>Chinese 3</h4>
+<h5>Physics</h5>
+<h6>AP Composition </h7>
+<h8>AP United States History> 
 </body>
 </html>
