fixed the headers to h2 for all of them

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ the following subjects: </p>
 <p>~AP United States History</p>
 
 <h2>Advanced Math Analysis</h2>
-<h3>AP Chemistry </h3>
-<h4>Chinese 3</h4>
-<h5>Physics</h5>
-<h6>AP Composition </h7>
-<h8>AP United States History> 
+<h2>AP Chemistry </h2>
+<h2>Chinese 3</h2>
+<h2>Physics</h2>
+<h2>AP Composition </h2>
+<h2>AP United States History</h2> 
 </body>
 </html>
