changed from <p> to <br>

--- a/index.html
+++ b/index.html
@@ -2,20 +2,31 @@
 <html>
 <body>
 <h1>Hello struggling juniors!</h1>
-<p> This is the bare bones website where I post files to help with 
-the following subjects: </p>
-<p>~Advanced Math Analysis </p>
-<p>~AP Chemistry</p>
-<p>~Chinese 3 </p>
-<p>~Physics</p>
-<p>~AP Composition</p>
-<p>~AP United States History</p>
+<p> This is the <em>bare bones</em> website where I post files to help with 
+the following subjects:<br>
+~Advanced Math Analysis <br>
+~AP Chemistry <br>
+~Chinese III <br>
+~Physics <br>
+~AP Composition <br>
+~AP United States History <br>
 
 <h2>Advanced Math Analysis</h2>
+<p></p>
+
 <h2>AP Chemistry </h2>
+<p></p>
+
 <h2>Chinese 3</h2>
+<p></p>
+
 <h2>Physics</h2>
+<p></p>
+
 <h2>AP Composition </h2>
-<h2>AP United States History</h2> 
+<p></p>
+
+<h2>AP United States History</h2>
+<p></p> 
 </body>
 </html>
