adding list breaks

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello struggling juniors!</h1>
+<h1><strong>Hello struggling juniors!</strong></h1>
 <p> This is the <em>bare bones</em> website where I post files to help with 
 the following subjects:<br>
-~Advanced Math Analysis <br>
-~AP Chemistry <br>
-~Chinese III <br>
-~Physics <br>
-~AP Composition <br>
-~AP United States History <br>
+<ul>
+<li>Advanced Math Analysis </li>
+<li>AP Chemistry</li> 
+<li>Chinese III</li> 
+<li>Physics </li>
+<li>AP Composition </li>
+<li>AP United States History </li>
+</ul>
 
 <h2>Advanced Math Analysis</h2>
 <p></p>
