changed page purpose
this is for my meeting tomorrow

--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><strong>Hello struggling juniors!</strong></h1>
-<p> This is the <em>bare bones</em> website where I post files to help with 
-the following subjects:<br>
-<ul>
-<li>Advanced Math Analysis </li>
-<li>AP Chemistry</li> 
-<li>Chinese III</li> 
-<li>Physics </li>
-<li>AP Composition </li>
-<li>AP United States History </li>
-</ul>
-
-</p>
-</body>
+<h1>My Issues in AP Chemsitry </h1>
+<ol>
+<li>He doens't teach. </li>
+<li>He isn't consistant. </li>
+<li>He isn't appropriate. </li>
+<li>He dosn't follow his own rules. </li>
+<li>He doesn't prepare us for our test. </li>
+</ol>
 </html>
