changing purpose to practice

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+h2 {
+color: purple
+}
+body {
+background-color: yellow
+}
+</style>
+</head>
 <body>
-<h1>My Issues in AP Chemsitry </h1>
-<ol>
-<li>He doens't teach. </li>
-<li>He isn't consistant. </li>
-<li>He isn't appropriate. </li>
-<li>He dosn't follow his own rules. </li>
-<li>He doesn't prepare us for our test. </li>
-</ol>
+<h1>Practice Page </h1>
+<p>Just practicing for college and my future :) </P>
+
+
+</body>
+
 </html>
