--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-h2 {
-color: purple
-}
-body {
-background-color: yellow
-}
-</style>
-</head>
-<body>
-<h1>Practice Page </h1>
-<p>Just practicing for college and my future :) </P>
+    <head>
+        <meta charset="utf-8">
+        <title>homework help</title>
+        <style>
+            body{
+                background-color:green;
+            }
+        </style>
+    </head>
+    <body>
+    <h1>Kaila's Notes</h1>
+    <p>This is exactly what you would think it is: all of Kaila Webb's notes. Essentailly, Kaila knows Junior year <strong>sucks</strong> (<em>sadly</em> from experience.) So, to try and help everybody else out, she's putting all of her stuff on here. Old homework prompts, essay examples, and notes from teachers <em>and</em> on her own. Get what you need to below, and <strong>good luck!</strong>
+    <h2>Advanced Math Analysis</h2>
+    <ul>
+        <a href="https://drive.google.com/folderview?id=0B81y0-vLSBNvZGpYdWdVdlpOMFE&usp=sharing" target="_blank"><li>notes</li></a>
+        <a target="_blank" href="https://drive.google.com/file/d/0B81y0-vLSBNvU051N1hEUkVVYU0/view?usp=sharing"><li>Homework</li></a>
+        <a target="_blank" href="https://sites.google.com/a/clovisusd.k12.ca.us/mrs-denhartog/advanced-math-analysis-assignments-1"><li>In case you've missed an assignment, here are all of Mrs. Denhartog's assignment sheets.</li></a>
+    </ul>
+    <h3>Helpful Links for Math</h3>
+    <ul>
+        <a target="_blank" href="http://www.webmath.com/trigsimp.html"><li>This will simplify a trigonometic expression.</li></a>
+        <a target="blank" href="http://www.calcchat.com/book/Precalculus-With-Limits-AGA-6e/"><li>This is the answers to the book's odd questions.</li></a>
+    </ul>
+    
+    <h2>AP Chemistry</h2>
+    <ul>
+        <a><li>Homework</li></a>
+    </ul>
+    <h2>Chinese III(中文三）</h2>
+    <h2>Physics</h2>
+    <h2>AP Composition</h2>
+    <h2></h2>
+    
+    </p>
 
 
-</body>
-
+    </body>
 </html>
