--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
     
     <h2>AP Chemistry</h2>
     <ul>
-        <a><li>Homework</li></a>
-    </ul>
-    <h2>Chinese III(中文三）</h2>
+	<a target="_blank" href="https://drive.google.com/folderview?id=0B81y0-vLSBNvQzh1Q2FWWmtleFE&usp=sharing"><li>Homework</li></a>
+	<a target="_blank" href="https://drive.google.com/folderview?id=0B81y0-vLSBNvU1g5OUpBb0hhNms&usp=sharing"><li>Studying (notes and other stuff_)</li></a>
+	<li><a target="_blank" href="http://hunterchemistry.com/index.htm">Mr. Hunter's Webste </a>(This will <em>not</em> work unless you can run a ton of flash)</li>
+	</ul>
+	<h3>Helpful links</h3>
+	<ul>
+	<a target="_blank" href="http://www.kentchemistry.com/aplinks/AplinksINDEX.htm"><li>Teacher with the same textbook</a> This includes his lectures and notes.</li>
+	<a target="_blank" href="https://sites.google.com/a/abschools.org/baumritter/home/ap-chemistry/ap-chapter-answers"><li>Answers both even and odd</li></a>
+	<a target="_blank" href="http://www.chemistry-dictionary.com/search-terms.php"><li>Chemistry dictionary</li></a>
+	
+	</ul>
+	<br>
+    <h2>Chinese III</h2>
     <h2>Physics</h2>
     <h2>AP Composition</h2>
     <h2></h2>
